# document_rag_bot

./: Dockerfile  README.md  dev.run.sh  docker-compose.yml  pyproject.toml
assets/: dataset.csv  tfidf_vectorizer.joblib  ui_texts.yaml
assets/eval_scores/generation/: eval.hybrid.jina-reranker.llama3.2:3b.ragas.en.json  eval.hybrid.jina-reranker.llama3.2:3b.ragas.vi.json
assets/eval_scores/reranking/bge-reranker/: eval.hybrid.bge-reranker.no-llm.scores.en.json  eval.hybrid.bge-reranker.no-llm.scores.full.json  eval.hybrid.bge-reranker.no-llm.scores.vi.json
assets/eval_scores/reranking/jina-reranker/: eval.hybrid.jina-reranker.no-llm.scores.en.json  eval.hybrid.jina-reranker.no-llm.scores.full.json  eval.hybrid.jina-reranker.no-llm.scores.vi.json
assets/eval_scores/reranking/no-reranker/: eval.hybrid.no-reranker.no-llm.scores.en.json  eval.hybrid.no-reranker.no-llm.scores.full.json  eval.hybrid.no-reranker.no-llm.scores.vi.json
assets/eval_scores/retrieval/bge-m3/: eval.bge-m3.no-reranker.no-llm.scores.en.json  eval.bge-m3.no-reranker.no-llm.scores.full.json  eval.bge-m3.no-reranker.no-llm.scores.vi.json
assets/eval_scores/retrieval/hybrid/: eval.hybrid.no-reranker.no-llm.scores.en.json  eval.hybrid.no-reranker.no-llm.scores.full.json  eval.hybrid.no-reranker.no-llm.scores.vi.json
assets/eval_scores/retrieval/tfidf/: eval.tfidf.no-reranker.no-llm.scores.en.json  eval.tfidf.no-reranker.no-llm.scores.full.json  eval.tfidf.no-reranker.no-llm.scores.vi.json
assets/ragas_results/: eval.hybrid.jina-reranker.llama3.2:3b.ragas.en.json  eval.hybrid.jina-reranker.llama3.2:3b.ragas.vi.json
document_rag_bot/: __init__.py  log.py  settings.py
document_rag_bot/db/: qdrant.py  schema.py
document_rag_bot/services/: __init__.py
document_rag_bot/services/chat_models/: __init__.py  dependencies.py  manager.py  settings.py
document_rag_bot/services/embedding_models/: dependencies.py  manager.py  settings.py
document_rag_bot/services/embedding_models/locals/: __init__.py  tfidf.py
document_rag_bot/web/: __init__.py  frontend.py
document_rag_bot/web/api/: __init__.py  __main__.py  application.py  gunicorn_runner.py  lifespan.py  router.py
document_rag_bot/workflow/: __init__.py  node.py  utils.py
document_rag_bot/workflow/config/: graph.yaml  metadata.yaml  templates.yaml
document_rag_bot/workflow/config/nodes/: answer_generator.yaml  conversation_analyst.yaml  document_reranker.yaml  document_retriever.yaml  input_validator.yaml  result_composer.yaml  workflow_supervisor.yaml
document_rag_bot/workflow/structs/: __init__.py  config.py
document_rag_bot/workflow/tools/: answer_generator.py  conversation_analyst.py  document_reranker.py  document_retriever.py  input_validator.py  result_composer.py  workflow_supervisor.py
tests/: __init__.py  conftest.py
